--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -19,7 +19,7 @@
             <li><a class="u-email" href="mailto:{{ site.email }}">{{ site.email }}</a></li>
             {%- endif -%}
             {%- if site.copyright -%}
-            <li>copyright &copy; {{ 'now' | date: '%Y' }} {{ site.copyright }} | all rights reserved</li>
+            <li>| copyright &copy; {{ 'now' | date: '%Y' }} {{ site.copyright }} | all rights reserved |</li>
             {%- endif -%}
         </ul>
       </div>
