--- a/_sass/minima.scss
+++ b/_sass/minima.scss
@@ -10,8 +10,8 @@ $base-line-height: 1.5 !default;
 
 $spacing-unit:     30px !default;
 
-$text-color:       #111 !default;
-$background-color: #fdfdfd !default;
+$text-color:       #575555 !default;
+$background-color: #FAF7EF !default;
 $brand-color:      #2a7ae2 !default;
 
 $grey-color:       #828282 !default;
