perused thru and modified minima.scss and _layout.scss until no more immediate edits for now

--- a/_sass/minima.scss
+++ b/_sass/minima.scss
@@ -1,3 +1,5 @@
+/* some parts modified but no more immediate modifications warranted 09/11/20 JYC */
+
 @charset "utf-8";
 
 // Define defaults for each variable.
