learnt a super valuable lesson. any change made to _sass/minima/_layout.scss will be automatically applied to _site/assets/main.css

--- a/_sass/minima/_layout.scss
+++ b/_sass/minima/_layout.scss
@@ -20,10 +20,11 @@
   letter-spacing: -1px;
   margin-bottom: 0;
   float: left;
+  color: #AF5E59;
 
   &,
   &:visited {
-    color: $grey-color-dark;
+    color: #AF5E59;
   }
 }
 
