successfully modified header to look more spaced out

--- a/_sass/minima/_layout.scss
+++ b/_sass/minima/_layout.scss
@@ -4,8 +4,8 @@
  * Site header
  */
 .site-header {
-  border-top: 5px solid $grey-color-dark;
-  border-bottom: 1px solid $grey-color-light;
+  border-top: 1.25rem solid $background-color;
+  border-bottom: 0.5rem solid $background-color;
   min-height: $spacing-unit * 1.865;
 
   // Positioning context for the mobile navigation icon
