--- a/_sass/minima/_layout.scss
+++ b/_sass/minima/_layout.scss
@@ -8,6 +8,7 @@
   border-bottom: 0.5rem solid $background-color;
   min-height: $spacing-unit * 1.865;
 
+
   // Positioning context for the mobile navigation icon
   position: relative;
 }
@@ -30,7 +31,8 @@
 
 .site-nav {
   float: right;
-  line-height: $base-line-height * $base-font-size * 2.25;
+  line-height: 4.846153846153846rem;
+
 
   .nav-trigger {
       display: none;
@@ -41,7 +43,8 @@
   }
 
   .page-link {
-    color: #0A0A0A;
+    font-size: 1.25rem;
+    color: #6B8C5D;
     line-height: $base-line-height;
 
     // Gaps between nav items, but not on the last one
@@ -95,6 +98,7 @@
     .page-link {
       display: block;
       padding: 5px 10px;
+
 
       &:not(:last-child) {
         margin-right: 0;
