return to this commit if my attempt at modifying site-titles lineheight messes up future unforeseen config (i did it to center jinyoung in line with the hamburger menu

--- a/_sass/minima/_layout.scss
+++ b/_sass/minima/_layout.scss
@@ -53,6 +53,10 @@
     }
   }
 
+  .page-link:hover {
+    color: #000;
+  }
+
   @include media-query($on-palm) {
     position: absolute;
     top: 9px;
