--- a/_sass/minima/_layout.scss
+++ b/_sass/minima/_layout.scss
@@ -29,6 +29,11 @@
   }
 }
 
+.site-title:hover {
+  font-weight: 900;
+  text-decoration: none;
+}
+
 .site-nav {
   float: right;
   line-height: 3.7rem;
@@ -55,6 +60,7 @@
 
   .page-link:hover {
     color: #000;
+    text-decoration: none;
   }
 
   @include media-query($on-palm) {
