final modifications on minimal footer

--- a/_sass/minima/_layout.scss
+++ b/_sass/minima/_layout.scss
@@ -138,6 +138,8 @@
   list-style: none;
   margin-left: 0;
   display: inline;
+  text-align: center;
+  font-size: 0.845rem;
 }
 
 .footer-col-wrapper {
