--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,21 +1,11 @@
 <footer class="site-footer h-card">
   <data class="u-url" href="{{ "/" | relative_url }}"></data>
 
-  <div class="wrapper">
-
-    <h2 class="footer-heading">{%- include social.html -%}</h2>
-
-    <div class="footer-col-wrapper">
-      <div class="footer-col footer-col-1">
         <ul class="contact-list">
-          <li class="p-name">
             {%- if site.copyright -%}
             <li>| copyright &copy; {{ 'now' | date: '%Y' }} {{ site.copyright }} | all rights reserved |</li>
             {%- endif -%}
         </ul>
-      </div>
-    </div>
-
-  </div>
+        {%- include social.html -%}
 
 </footer>
