getting around to editing posts. all good so far (baby steps to split ideas and journey categories and have in each blog-ideas and blog-journey a markdown that specifies category)

--- a/_sass/minima/_layout.scss
+++ b/_sass/minima/_layout.scss
@@ -49,7 +49,7 @@
 
   .page-link {
     font-size: 1.25rem;
-    color: #6B8C5D;
+    color: #4E6E4E;
     line-height: $base-line-height;
 
     // Gaps between nav items, but not on the last one
