first moved the subscribe to my rss feed from footer.html to home.html, home-ideas.html, and home-journey.html. next is to create individual rss feeds

--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -29,4 +29,6 @@ layout: default
     </ul>
   {%- endif -%}
 
+  <p class="rss-subscribe">subscribe to my<a href="{{ "/feed.xml" | relative_url }}"> rss feed</a></p>
+
 </div>
