--- a/_layouts/home-ideas.html
+++ b/_layouts/home-ideas.html
@@ -31,4 +31,7 @@ layout: default
     </ul>
   {%- endif -%}
 
+  <p class="rss-subscribe">subscribe to my<a href="{{ "/feed.xml" | relative_url }}"> rss feed</a></p>
+
+
 </div>
