--- a/_layouts/home-journey.html
+++ b/_layouts/home-journey.html
@@ -31,4 +31,5 @@ layout: default
     </ul>
   {%- endif -%}
 
+  <p class="rss-subscribe">subscribe to my<a href="{{ "/feed.xml" | relative_url }}"> rss feed</a></p>
 </div>
