modified home-ideas/home-journey.html to route their individual rss feed xml file (blog-ideas/feed.xml) and created feed.xml for each blog-ideas and blog-journey. NOTE: ideas [0] popped up on nav bar again. go back to last commit to trouble shoot if need be

--- a/_layouts/home-ideas.html
+++ b/_layouts/home-ideas.html
@@ -31,7 +31,7 @@ layout: default
     </ul>
   {%- endif -%}
 
-  <p class="rss-subscribe">subscribe to my<a href="{{ "/feed.xml" | relative_url }}"> rss feed</a></p>
+  <p class="rss-subscribe">subscribe to my<a href="{{ "/blog-ideas/feed.xml" | relative_url }}"> rss feed</a></p>
 
 
 </div>
