--- a/_sass/minima.scss
+++ b/_sass/minima.scss
@@ -1,11 +1,12 @@
 /* some parts modified but no more immediate modifications warranted 09/11/20 JYC */
 
 @charset "utf-8";
+@import url(https://fonts.google.com/specimen/Ubuntu+Mono?sidebar.open=true&selection.family=Ubuntu+Mono);
 
 // Define defaults for each variable.
-
+$title-font-family: Ubuntu Mono;
 $base-font-family: Ubuntu Mono !default;
-$base-font-size:   16px !default;
+$base-font-size:   18px !default;
 $base-font-weight: 400 !default;
 $small-font-size:  $base-font-size * 0.875 !default;
 $base-line-height: 1.5 !default;
