--- a/_sass/minima/_base.scss
+++ b/_sass/minima/_base.scss
@@ -99,6 +99,10 @@ h1, h2, h3, h4, h5, h6 {
   font-weight: $base-font-weight;
 }
 
+.title-font-family {
+  font-family: $title-font-family;
+}
+
 
 
 /**
