--- a/assets/main.scss
+++ b/assets/main.scss
@@ -3,3 +3,24 @@
 ---
 
 @import "minima";
+
+.profile-pic {
+    display: flex;
+    justify-content: center;
+}
+
+#circular {
+    max-width: 350px;
+    max-height: 350px;
+    margin-bottom: 2rem;
+    border-radius: 50%;
+}
+
+@media screen and (max-width:400px) {
+
+    #circular {
+        width: 250px;
+        height:250px;
+    }
+
+}
