--- a/_sass/minima.scss
+++ b/_sass/minima.scss
@@ -1,7 +1,7 @@
 /* some parts modified but no more immediate modifications warranted 09/11/20 JYC */
 
 @charset "utf-8";
-@import url(https://fonts.google.com/specimen/Ubuntu+Mono?sidebar.open=true&selection.family=Ubuntu+Mono);
+@import url('https://fonts.google.com/specimen/Ubuntu+Mono?sidebar.open=true&selection.family=Ubuntu+Mono');
 
 // Define defaults for each variable.
 $title-font-family: Ubuntu Mono;
