learned about how to self-host google fonts

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -3,7 +3,7 @@
 
         <ul class="contact-list">
             {%- if site.copyright -%}
-            <li>| copyright &copy; {{ 'now' | date: '%Y' }} {{ site.copyright }} | all rights reserved |</li>
+            <li>| copyright &copy; {{ 'now' | date: '%Y' }} {{ site.copyright }} |</li>
             {%- endif -%}
         </ul>
         {%- include social.html -%}
