--- a/_sass/minima/_base.scss
+++ b/_sass/minima/_base.scss
@@ -10,6 +10,20 @@ dl, dd, ol, ul, figure {
   padding: 0;
 }
 
+/*apparently you should self-host Google Fonts, since doing it the Google way contributes to mass surveillance. wut?? */
+/* ubuntu-mono-regular - latin */
+@font-face {
+  font-family: 'Ubuntu Mono';
+  font-style: normal;
+  font-weight: 400;
+  src: url('../fonts/ubuntu-mono-v10-latin-regular.eot'); /* IE9 Compat Modes */
+  src: local('Ubuntu Mono'), local('UbuntuMono-Regular'),
+       url('../fonts/ubuntu-mono-v10-latin-regular.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
+       url('../fonts/ubuntu-mono-v10-latin-regular.woff2') format('woff2'), /* Super Modern Browsers */
+       url('../fonts/ubuntu-mono-v10-latin-regular.woff') format('woff'), /* Modern Browsers */
+       url('../fonts/ubuntu-mono-v10-latin-regular.ttf') format('truetype'), /* Safari, Android, iOS */
+       url('../fonts/ubuntu-mono-v10-latin-regular.svg#UbuntuMono') format('svg'); /* Legacy iOS */
+}
 
 
 /**
