--- a/_sass/minima.scss
+++ b/_sass/minima.scss
@@ -1,12 +1,13 @@
 /* some parts modified but no more immediate modifications warranted 09/11/20 JYC */
 
 @charset "utf-8";
+@import url('https://fonts.google.com/specimen/Ubuntu+Mono?sidebar.open=true&selection.family=Ubuntu+Mono');
 
 // Define defaults for each variable.
 $title-font-family: 'Ubuntu Mono', monospace;
-$base-font-family: 'Ubuntu Mono', monospace !default;
+$base-font-family: 'Ubuntu Mono', !default;
 $base-font-size:   18px !default;
-$base-font-weight: 500 !default;
+$base-font-weight: 400 !default;
 $small-font-size:  $base-font-size * 0.875 !default;
 $base-line-height: 1.5 !default;
 
@@ -43,7 +44,6 @@ $on-laptop:        800px !default;
 
 @mixin relative-font-size($ratio) {
   font-size: $base-font-size * $ratio;
-  font-weight: $base-font-weight * $ratio;
 }
 
 // Import partials.
