--- a/_includes/head.html
+++ b/_includes/head.html
@@ -8,4 +8,5 @@
   {%- if jekyll.environment == 'production' and site.google_analytics -%}
     {%- include google-analytics.html -%}
   {%- endif -%}
+  <link rel="preload" as="font" type="font/woff2" href="www.jinyoung.xyz/fonts/ubuntu-mono-v10-latin-regular.woff2" crossorigin>
 </head>
