changed import paths on style.scss

--- a/css/style.scss
+++ b/css/style.scss
@@ -4,5 +4,5 @@
 // this is an empty stylesheet named "style.scss"
 // use @import here to load partials from your _sass folder
 
-@import "base";
-@import "mixins";
+@import "/minima/base";
+@import "/minima/mixins";
