--- a/_sass/minima/_base.scss
+++ b/_sass/minima/_base.scss
@@ -23,7 +23,7 @@ dl, dd, ol, ul, figure {
        url('../fonts/ubuntu-mono-v10-latin-regular.woff') format('woff'), /* Modern Browsers */
        url('../fonts/ubuntu-mono-v10-latin-regular.ttf') format('truetype'), /* Safari, Android, iOS */
        url('../fonts/ubuntu-mono-v10-latin-regular.svg#UbuntuMono') format('svg'); /* Legacy iOS */
-  font-display: optional;
+  font-display: swap;
 }
 
 
