--- a/_layouts/home-dev.html
+++ b/_layouts/home-dev.html
@@ -13,7 +13,7 @@ layout: default
     <h2 class="post-list-heading">{{ page.list_title | default: "Posts" }}</h2>
     <ul class="post-list">
       {%- for post in site.posts -%}
-      {%- if post.category=='ideas' -%}
+      {%- if post.category=='dev' -%}
       <li>
         {%- assign date_format = site.minima.date_format | default: "%b %-d, %Y" -%}
         <span class="post-meta">{{ post.date | date: date_format }}</span>
@@ -31,7 +31,7 @@ layout: default
     </ul>
   {%- endif -%}
 
-  <p class="rss-subscribe">subscribe to my<a href="{{ "/blog-ideas/feed.xml" | relative_url }}"> rss feed</a></p>
+  <p class="rss-subscribe">subscribe to my<a href="{{ "/blog-dev/feed.xml" | relative_url }}"> rss feed</a></p>
 
 
 </div>
