--- a/_sass/minima.scss
+++ b/_sass/minima.scss
@@ -5,7 +5,7 @@
 // Define defaults for each variable.
 $title-font-family: 'Ubuntu Mono', monospace;
 $base-font-family: 'Ubuntu Mono', !default;
-$base-font-size:   18px !default;
+$base-font-size:   1.125em !default;
 $base-font-weight: 400 !default;
 $small-font-size:  $base-font-size * 0.875 !default;
 $base-line-height: 1.5 !default;
@@ -25,7 +25,7 @@ $table-text-align: left !default;
 // Width of the content area
 $content-width:    800px !default;
 
-$on-palm:          600px !default;
+$on-palm:          200px !default;
 $on-laptop:        800px !default;
 
 // Use media queries like this:
