made post-link and <a> colors more in line with the rest of the color scheme

--- a/_sass/minima/_base.scss
+++ b/_sass/minima/_base.scss
@@ -124,12 +124,9 @@ h1, h2, h3, h4, h5, h6 {
  * Links
  */
 a {
-  color: $brand-color;
+  color: #476D98;
   text-decoration: none;
-
-  &:visited {
-    color: darken($brand-color, 15%);
-  }
+  font-weight: 900;
 
   &:hover {
     color: $text-color;
