--- a/_sass/minima/_layout.scss
+++ b/_sass/minima/_layout.scss
@@ -13,10 +13,6 @@
   position: relative;
 }
 
-.rss-subscribe {
-  color: #A9A7A7;
-}
-
 .site-title {
   @include relative-font-size(1.625);
   font-size: 3.25rem;
@@ -230,11 +226,16 @@
 }
 
 .post-link {
+  color: #52749D;
   display: block;
   @include relative-font-size(1.5);
 }
 
 
+.post-link:hover {
+  color: #353535;
+  text-decoration: none;
+  }
 
 /**
  * Posts
