made post-link colour purple to make it stand out from other <a>

--- a/_sass/minima/_layout.scss
+++ b/_sass/minima/_layout.scss
@@ -119,7 +119,6 @@
 }
 
 
-
 /**
  * Site footer
  */
@@ -226,7 +225,7 @@
 }
 
 .post-link {
-  color: #52749D;
+  color: #5759A7;
   display: block;
   @include relative-font-size(1.5);
 }
