--- a/_includes/header.html
+++ b/_includes/header.html
@@ -7,9 +7,9 @@
 
     <nav class="site-nav">
         <div class="trigger">
-            <a class="page-link" href="/blog-journey">journey</a>
-            <a class="page-link" href="/blog-longreads">longreads</a>
-            <a class="page-link" href="/blog-dev">dev</a>
+            <a class="page-link" href="/journey">journey</a>
+            <a class="page-link" href="/longreads">longreads</a>
+            <a class="page-link" href="/dev">dev</a>
         </div>
       </nav>
   </div>
