--- a/_sass/minima/_base.scss
+++ b/_sass/minima/_base.scss
@@ -130,7 +130,7 @@ a {
 
   &:hover {
     color: $text-color;
-    text-decoration: underline;
+    text-decoration: none;
   }
 
   .social-media-list &:hover {
