labelled self-hosted google font code on head.html and modified dev nav bar anchor tag

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -9,7 +9,7 @@
         <div class="trigger">
             <a class="page-link" href="/journey">journey</a>
             <a class="page-link" href="/longreads">longreads</a>
-            <a class="page-link" href="/dev">dev</a>
+            <a class="page-link" href="/dev">&lt;/&gt;</a>
         </div>
       </nav>
   </div>
