--- a/_includes/head.html
+++ b/_includes/head.html
@@ -2,7 +2,7 @@
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  {%- seo -%}
+  <!-- self-hosting Google Fonts is the right thing to do! -->
   <link rel="preload" as="font" type="font/woff"
   href="./fonts/ubuntu-mono-v10-latin-regular.woff" crossorigin>
   <link rel="preload" as="font" type="font/woff2"
