--- a/_includes/head.html
+++ b/_includes/head.html
@@ -7,6 +7,7 @@
   href="./fonts/ubuntu-mono-v10-latin-regular.woff" crossorigin>
   <link rel="preload" as="font" type="font/woff2"
   href="./fonts/ubuntu-mono-v10-latin-regular.woff2" crossorigin>
+  <!-- end of self-hosted Google Fonts code -->
   <link rel="stylesheet" href="{{ '/assets/main.css' | relative_url }}">
   {%- feed_meta -%}
   {%- if jekyll.environment == 'production' and site.google_analytics -%}
