corrected modified route for /dev hyperlink on home.html

--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -10,4 +10,4 @@ title: 'about'
 <h3 id="hey-there-">Hey there!</h3>
 <h4 id="my-name-is-jin-young-and-i-like-to-write-to-materialise-my-evolving-thoughts-on-life-s-journey-">My name is Jin Young, and I like to write to materialise my evolving thoughts on my life's journey.</h4>
 <p>I try to seek new ideas and engage with them intentionally. Building on that principle, <a href="https://jinyoung.xyz/">jinyoung.xyz</a> is a medium on which I share my recent endeavours and hope to live more consciously through writing. </p>
-<p>Best way to reach out to me is via <a href="mailto:jinyoungsjourney@gmail.com" target="_blank">email</a>, and <a href="https://jinyoung.xyz/blog-dev/">dev</a> is my creative outlet.</p>
+<p>Best way to reach out to me is via <a href="mailto:jinyoungsjourney@gmail.com" target="_blank">email</a>, and <a href="https://jinyoung.xyz/dev/">dev</a> is my creative outlet.</p>
