--- a/_includes/social.html
+++ b/_includes/social.html
@@ -1,8 +1,8 @@
-<div class="social-links">
-    <ul class="social-media-list">
-      {%- if site.rss -%}<li><a target="_blank" href="{{ 'feed.xml' | relative_url }}"><svg class="svg-icon"><use xlink:href="{{ '/assets/minima-social-icons.svg#rss' | relative_url }}"></use></svg> <span>{{ site.rss | escape }}</span></a></li>{%- endif -%}
-      {%- if site.github_username -%}<li><a target="_blank" href="https://github.com/{{ site.github_username| cgi_escape | escape }}"><svg class="svg-icon"><use xlink:href="{{ '/assets/minima-social-icons.svg#github' | relative_url }}"></use></svg></a></li>{%- endif -%}
-      {%- if site.linkedin_username -%}<li><a target="_blank" href="https://www.linkedin.com/in/{{ site.linkedin_username| cgi_escape | escape }}"><svg class="svg-icon"><use xlink:href="{{ '/assets/minima-social-icons.svg#linkedin' | relative_url }}"></use></svg></a></li>{%- endif -%}
-      {%- if site.stackoverflow_username -%}<li><a target="_blank" href="https://stackoverflow.com/users/{{ site.stackoverflow_username| escape }}"><svg class="svg-icon"><use xlink:href="{{ '/assets/minima-social-icons.svg#stackoverflow' | relative_url }}"></use></svg></a></li>{%- endif -%}
+
+    <ul style='list-style: none; display: inline-flex; margin-bottom:5px; display: flex; justify-content: center'>
+      {%- if site.github_username -%}<li style="margin-right: 8px;"><a target="_blank" href="https://github.com/{{ site.github_username| cgi_escape | escape }}"><svg class="svg-icon"><use xlink:href="{{ '/assets/minima-social-icons.svg#github' | relative_url }}"></use></svg></a></li>{%- endif -%}
+      {%- if site.linkedin_username -%}<li style="margin-right: 8px;"><a target="_blank" href="https://www.linkedin.com/in/{{ site.linkedin_username| cgi_escape | escape }}"><svg class="svg-icon"><use xlink:href="{{ '/assets/minima-social-icons.svg#linkedin' | relative_url }}"></use></svg></a></li>{%- endif -%}
+      {%- if site.stackoverflow_username -%}<li style="margin-right: 8px;"><a target="_blank" href="https://stackoverflow.com/users/{{ site.stackoverflow_username| escape }}"><svg class="svg-icon"><use xlink:href="{{ '/assets/minima-social-icons.svg#stackoverflow' | relative_url }}"></use></svg></a></li>{%- endif -%}
+      {%- if site.rss -%}<li style="margin-right: 8px;"><a target="_blank" href="{{ 'feed.xml' | relative_url }}"><svg class="svg-icon"><use xlink:href="{{ '/assets/minima-social-icons.svg#rss' | relative_url }}"></use></svg></a></li>{%- endif -%}
     </ul>
-</div>
+
