fixed border/padding heights so that visitor does not need to scroll to bottom of footer border. neat.

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,4 +1,4 @@
-<footer class="site-footer h-card">
+<footer class="site-footer h-card" style="padding-bottom: 15px; border-bottom-width: 10px">
     <data class="u-url" href="{{ "/" | relative_url }}"></data>
     <div class="wrapper">
         <div class="social-links">
