--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -3,7 +3,7 @@ layout: default
 ---
 <article class="post">
 
-  <header class="post-header">
+  <header class="post-header" style="border-top: 1.5rem solid #FAF7EF;>
     <h1 class="post-title">{{ page.title | escape }}</h1>
   </header>
 
