page-heading looked weird without margin-top on laptop, so added 25px of margin-top and now mobile ver. looks weird since nav bar moves below title. refer back to this commit for when making <header> responsive, and also comment-earmarked on _layout.scss

--- a/_sass/minima/_layout.scss
+++ b/_sass/minima/_layout.scss
@@ -216,6 +216,7 @@
   font-size: 2em;
   line-spacing: 0px;
   line-height: 1;
+  margin-top: 25px; /* this will need to be modified once <header> is centered for mobile-responsiveness */
 }
 
 .post-list-heading {
