--- a/assets/main.scss
+++ b/assets/main.scss
@@ -19,8 +19,9 @@
 @media screen and (max-width:400px) {
 
     #circular {
-        width: 250px;
-        height:250px;
+        width: 200px;
+        height: 200px;
+        margin-top: -3.25rem;
     }
 
 }
