trying to make both a50 and iphone 11 responsive at the same time, tho still not grasping the full px dimension of a50

--- a/_sass/minima/_layout.scss
+++ b/_sass/minima/_layout.scss
@@ -135,7 +135,7 @@
 
 .social-media-list li, .pagination li {
   float: left;
-  margin: 5px 10px 5px 0;
+  margin: 5px 10px 5px 10px;
   font-size: 14px;
 }
 
