--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,17 +1,13 @@
 <header class="site-header" role="banner">
 
-  <div class="wrapper">
-    {%- assign default_paths = site.pages | map: "path" -%}
-    {%- assign page_paths = site.header_pages | default: default_paths -%}
-    <div>
-      <a class="site-title" rel="author" href="{{ "/" | relative_url }}">{{ site.title | escape }}</a>
-    </div>
-    <div="navigation-bar">
-        <ul class="social-media-list">
-            <a class="page-link" href="/journey">journey</a>
-            <a class="page-link" href="/longreads">longreads</a>
-            <a class="page-link" href="/dev">&lt;/&gt;</a>
-        </ul>
-    </div>
-  </div>
+    <a class="site-title" rel="author" href="{{ "/" | relative_url }}">{{ site.title | escape }}</a>
+
+    <ul class="navigation-bar">
+        <a class="nav-link" href="/journey">journey</a>
+        <a class="nav-link" href="/longreads">longreads</a>
+        <a class="nav-link" href="/dev">&lt;/&gt;</a>
+        <a class="tail-link" href="/pics">pics</a>
+    </ul>
+
+
 </header>
