converted px units to rem, maybe this saves me the trouble of mediaqueries?

--- a/_sass/minima/_layout.scss
+++ b/_sass/minima/_layout.scss
@@ -17,7 +17,7 @@
   font-size: 3.25rem;
   font-weight: 550;
   line-height: 3.1rem;
-  letter-spacing: -3.5px;
+  letter-spacing: 0.219em;
   color: #AF5E59;
 
   &,
@@ -36,14 +36,14 @@
   display: table;
   margin-left: auto;
   margin-right: auto;
-  margin-top: 10px;
+  margin-top: 0.625rem;
 }
 
 /*nav link is for journey, longreads, and </>,
 essentially all the pages that pop up in navigation bar
 that is NOT the last one on the list */
 .nav-link {
-  margin-right: 30px;
+  margin-right: 1.875em;
   color: #4E6E4E;
 
   &:hover {
@@ -52,14 +52,14 @@ that is NOT the last one on the list */
 
 }
 
-@media screen and (max-width:600px) {
-  .nav-link {
-    margin-right: 14px;
-    font-size: 18px;
-  }
-  .tail-link {
-    font-size: 18px;
-  }
+// @media screen and (max-width:600px) {
+//   .nav-link {
+//     margin-right: 14px;
+//     font-size: 18px;
+//   }
+//   .tail-link {
+//     font-size: 18px;
+//   }
 
 }
 
