navbar didnt center at all on mobile. convered margin-right from em to rem to see if that makes a difference

--- a/_sass/minima/_layout.scss
+++ b/_sass/minima/_layout.scss
@@ -43,7 +43,7 @@
 essentially all the pages that pop up in navigation bar
 that is NOT the last one on the list */
 .nav-link {
-  margin-right: 1.875em;
+  margin-right: 1.875rem;
   color: #4E6E4E;
   font-size: 1.55rem;
 
