centering header and footer both horizontally and vertically is a lot more work than i thought. i suppose the only solution would be to customise landing page using HTML instead of markdown (by first converting the existing markdown into html, and then pasting it into home.html, then shrink the gap between Best way to reach out ... outlet. line and the footer line. Getting there!

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,13 +1,10 @@
-<footer class="site-footer h-card" style="padding-bottom: 15px; border-bottom-width: 10px">
+<footer class="site-footer">
     <data class="u-url" href="{{ "/" | relative_url }}"></data>
     <div class="wrapper">
-        <div class="social-links">
-            <ul class="social-media-list">
-                {%- if site.copyright -%}
-                    <li>| copyright &copy; {{ 'now' | date: '%Y' }} {{ site.copyright }} |</li>
-                {%- endif -%}
-            </ul>
-        </div>
+            {%- if site.copyright -%}
+                <div class="copyright-note">| copyright &copy; {{ 'now' | date: '%Y' }} {{ site.copyright }} |</div>
+            {%- endif -%}
+            </div>
         {%- include social.html -%}
     </div>
 </footer>
