--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,3 +1,4 @@
+<div class="wrapper">
 <header class="site-header" role="banner">
 
     <a class="site-title" rel="author" href="{{ "/" | relative_url }}">{{ site.title | escape }}</a>
@@ -6,8 +7,10 @@
         <a class="nav-link" href="/journey">journey</a>
         <a class="nav-link" href="/longreads">longreads</a>
         <a class="nav-link" href="/dev">&lt;/&gt;</a>
-        <a class="tail-link" href="/pics">pics</a>
+        <a class="tail-link" href="/gallery">photos</a>
+
     </ul>
 
 
 </header>
+</div>
