placeholder landing page for /photos

--- a/_sass/minima/_base.scss
+++ b/_sass/minima/_base.scss
@@ -43,7 +43,11 @@ body {
   display: flex;
   min-height: 100vh;
   flex-direction: column;
-  margin: 15px;
+  margin-top: 15px;
+  margin-bottom: 15px;
+  margin-left: auto;
+  margin-right: auto;
+
 }
 
 
