post-content h1 h2 h3 etc were checked for redundancy. theyre good and earmarked as such

--- a/_sass/minima/_layout.scss
+++ b/_sass/minima/_layout.scss
@@ -224,32 +224,33 @@ since its the right-tail end of the nav bar */
   }
 }
 
+/* these below are good! not to be touched */
+
 .post-content {
   margin-bottom: $spacing-unit;
+  h2 {
+    @include relative-font-size(2);
 
-  // h2 {
-  //   @include relative-font-size(2);
+    @include media-query($on-laptop) {
+      @include relative-font-size(1.75);
+    }
+  }
 
-  //   @include media-query($on-laptop) {
-  //     @include relative-font-size(1.75);
-  //   }
-  // }
+  h3 {
+    @include relative-font-size(1.625);
 
-  // h3 {
-  //   @include relative-font-size(1.625);
+    @include media-query($on-laptop) {
+      @include relative-font-size(1.375);
+    }
+  }
 
-  //   @include media-query($on-laptop) {
-  //     @include relative-font-size(1.375);
-  //   }
-  // }
+  h4 {
+    @include relative-font-size(1.25);
 
-  // h4 {
-  //   @include relative-font-size(1.25);
-
-  //   @include media-query($on-laptop) {
-  //     @include relative-font-size(1.125);
-  //   }
-  // }
+    @include media-query($on-laptop) {
+      @include relative-font-size(1.125);
+    }
+  }
 }
 
 /*this border highlight was experimented on but decided not to go forward with it. saved for potential later use 9/17 //
