work on making title and navbar responsive tomorrow. commented out the sass mediaqueries to dissect

--- a/_sass/minima/_layout.scss
+++ b/_sass/minima/_layout.scss
@@ -55,6 +55,15 @@ that is NOT the last one on the list */
   &:hover {
     color: #000;
   }
+
+  // a {
+  //   @include relative-font-size(1.25);
+
+  //   @include media-query($on-laptop) {
+  //     @include relative-font-size(1.125);
+  //   }
+  // }
+
 }
 
 /*tail link is currently for 'pics',
@@ -66,6 +75,15 @@ since its the right-tail end of the nav bar */
   &:hover {
     color: #000;
   }
+
+  // a {
+  //   @include relative-font-size(1.25);
+
+  //   @include media-query($on-laptop) {
+  //     @include relative-font-size(1.125);
+  //   }
+  // }
+
 }
 
 // @media screen and (max-width:600px) {
@@ -105,59 +123,6 @@ since its the right-tail end of the nav bar */
 .contact-list {
   list-style: none;
 }
-
-
-/* the below classes were not used for customised footer */
-// .footer-col-wrapper {
-//   @include relative-font-size(0.9375);
-//   color: $grey-color;
-//   margin-left: -$spacing-unit / 2;
-//   @extend %clearfix;
-// }
-
-// .footer-col {
-//   float: left;
-//   margin-bottom: $spacing-unit / 2;
-//   padding-left: $spacing-unit / 2;
-// }
-
-// .footer-col-1 {
-//   width: -webkit-calc(35% - (#{$spacing-unit} / 2));
-//   width:         calc(35% - (#{$spacing-unit} / 2));
-// }
-
-// .footer-col-2 {
-//   width: -webkit-calc(20% - (#{$spacing-unit} / 2));
-//   width:         calc(20% - (#{$spacing-unit} / 2));
-// }
-
-// .footer-col-3 {
-//   width: -webkit-calc(45% - (#{$spacing-unit} / 2));
-//   width:         calc(45% - (#{$spacing-unit} / 2));
-// }
-
-// @include media-query($on-laptop) {
-//   .footer-col-1,
-//   .footer-col-2 {
-//     width: -webkit-calc(50% - (#{$spacing-unit} / 2));
-//     width:         calc(50% - (#{$spacing-unit} / 2));
-//   }
-
-//   .footer-col-3 {
-//     width: -webkit-calc(100% - (#{$spacing-unit} / 2));
-//     width:         calc(100% - (#{$spacing-unit} / 2));
-//   }
-// }
-
-// @include media-query($on-palm) {
-//   .footer-col {
-//     float: none;
-//     width: -webkit-calc(100% - (#{$spacing-unit} / 2));
-//     width:         calc(100% - (#{$spacing-unit} / 2));
-//   }
-// }
-
-/* the above classes were not used for customised footer */
 
 /**
  * Page content
