removed the subscribe to my rss for the individual pages, since the orange rss .svg in footer is enough. anywho, whoever uses rss would be savvy enough to subscribe by clicking on the orange .svg . or i hope so.

--- a/_layouts/home-journey.html
+++ b/_layouts/home-journey.html
@@ -31,5 +31,5 @@ layout: default
     </ul>
   {%- endif -%}
 
-  <p class="rss-subscribe">subscribe to my<a href="{{ "/blog-journey/feed.xml" | relative_url }}"> rss feed</a></p>
+  <!-- <p class="rss-subscribe">subscribe to my<a href="{{ "/journey/feed.xml" | relative_url }}"> rss feed</a></p> -->
 </div>
