--- a/_layouts/home-longreads.html
+++ b/_layouts/home-longreads.html
@@ -31,7 +31,7 @@ layout: default
     </ul>
   {%- endif -%}
 
-  <p class="rss-subscribe">subscribe to my<a href="{{ "/blog-longreads/feed.xml" | relative_url }}"> rss feed</a></p>
+  <!-- <p class="rss-subscribe">subscribe to my<a href="{{ "/longreads/feed.xml" | relative_url }}"> rss feed</a></p> -->
 
 
 </div>
