--- a/_sass/minima/_base.scss
+++ b/_sass/minima/_base.scss
@@ -43,8 +43,8 @@ body {
   display: flex;
   min-height: 100vh;
   flex-direction: column;
-  margin-top: 15px;
-  margin-bottom: 15px;
+  margin-top: 1.25rem;
+  margin-bottom: 1.25rem;
   margin-left: auto;
   margin-right: auto;
 
