--- a/_includes/social.html
+++ b/_includes/social.html
@@ -1,8 +1,21 @@
 
     <ul style='list-style: none; display: inline-flex; display: flex; justify-content: center; margin-left: 0px; margin-bottom: 0px;'>
-      {%- if site.github_username -%}<li style="margin-right: 8px;"><a target="_blank" href="https://github.com/{{ site.github_username| cgi_escape | escape }}"><svg class="svg-icon"><use xlink:href="{{ '/assets/minima-social-icons.svg#github' | relative_url }}"></use></svg></a></li>{%- endif -%}
-      {%- if site.linkedin_username -%}<li style="margin-right: 8px;"><a target="_blank" href="https://www.linkedin.com/in/{{ site.linkedin_username| cgi_escape | escape }}"><svg class="svg-icon"><use xlink:href="{{ '/assets/minima-social-icons.svg#linkedin' | relative_url }}"></use></svg></a></li>{%- endif -%}
-      {%- if site.stackoverflow_username -%}<li style="margin-right: 8px;"><a target="_blank" href="https://stackoverflow.com/users/{{ site.stackoverflow_username| escape }}"><svg class="svg-icon"><use xlink:href="{{ '/assets/minima-social-icons.svg#stackoverflow' | relative_url }}"></use></svg></a></li>{%- endif -%}
-      {%- if site.rss -%}<li><a target="_blank" href="{{ 'feed.xml' | relative_url }}"><svg class="svg-icon"><use xlink:href="{{ '/assets/minima-social-icons.svg#rss' | relative_url }}"></use></svg></a></li>{%- endif -%}
+
+      {%- if site.github_username -%}
+        <li style="margin-right: 8px;"><a target="_blank" href="https://github.com/{{ site.github_username| cgi_escape | escape }}"><svg class="svg-icon"><use xlink:href="{{ '/assets/minima-social-icons.svg#github' | relative_url }}"></use></svg></a></li>
+      {%- endif -%}
+
+      {%- if site.linkedin_username -%}
+        <li style="margin-right: 8px;"><a target="_blank" href="https://www.linkedin.com/in/{{ site.linkedin_username| cgi_escape | escape }}"><svg class="svg-icon"><use xlink:href="{{ '/assets/minima-social-icons.svg#linkedin' | relative_url }}"></use></svg></a></li>
+      {%- endif -%}
+
+      {%- if site.stackoverflow_username -%}
+        <li style="margin-right: 8px;"><a target="_blank" href="https://stackoverflow.com/users/{{ site.stackoverflow_username| escape }}"><svg class="svg-icon"><use xlink:href="{{ '/assets/minima-social-icons.svg#stackoverflow' | relative_url }}"></use></svg></a></li>
+      {%- endif -%}
+
+      {%- if site.rss -%}
+        <li><a target="_blank" href="{{ 'feed.xml' | relative_url }}"><svg class="svg-icon"><use xlink:href="{{ '/assets/minima-social-icons.svg#rss' | relative_url }}"></use></svg></a></li>
+      {%- endif -%}
+
     </ul>
 
