spruced up title font. looks much better now, at least on computer viewing

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -2,12 +2,21 @@
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <!-- self-hosting Google Fonts is the right thing to do! -->
+
+  <!-- self-hosting Google Fonts is the right thing to do! this font was used for body text -->
   <link rel="preload" as="font" type="font/woff"
   href="./fonts/ubuntu-mono-v10-latin-regular.woff" crossorigin>
   <link rel="preload" as="font" type="font/woff2"
   href="./fonts/ubuntu-mono-v10-latin-regular.woff2" crossorigin>
   <!-- end of self-hosted Google Fonts code -->
+
+  <!-- self-hosting round 2. this font was used for title 'jinyoung' -->
+  <link rel="preload" as="font" type="font/woff"
+  href="./fonts/offside-v8-latin-regular.woff" crossorigin>
+  <link rel="preload" as="font" type="font/woff2"
+  href="./fonts/offside-v8-latin-regular.woff2" crossorigin>
+  <!-- end of self-hosted Google Fonts code -->
+
   <link rel="stylesheet" href="{{ '/assets/main.css' | relative_url }}">
   {%- feed_meta -%}
   {%- if jekyll.environment == 'production' and site.google_analytics -%}
