--- a/_sass/minima/_layout.scss
+++ b/_sass/minima/_layout.scss
@@ -22,11 +22,11 @@
   color: #AF5E59;
   margin-left: auto;
   margin-right:auto;
+  font-family: Offside;
 
   &,
   &:visited {
-    color: #AF5E59;
-  }
+    color: #AF5E59;  }
 }
 
 .site-title:hover {
