--- a/_sass/minima.scss
+++ b/_sass/minima.scss
@@ -3,7 +3,7 @@
 @charset "utf-8";
 
 // Define defaults for each variable.
-$title-font-family: 'Ubuntu Mono', monospace;
+$title-font-family: 'Offside', monospace;
 $base-font-family: 'Ubuntu Mono', !default;
 $base-font-size:   1.125em !default;
 $base-font-weight: 400 !default;
