--- a/_sass/minima/_base.scss
+++ b/_sass/minima/_base.scss
@@ -26,6 +26,20 @@ dl, dd, ol, ul, figure {
   font-display: auto;
 }
 
+/* offside-regular - latin */
+@font-face {
+  font-family: 'Offside';
+  font-style: normal;
+  font-weight: 400;
+  src: url('../fonts/offside-v8-latin-regular.eot'); /* IE9 Compat Modes */
+  src: local('Offside'), local('Offside-Regular'),
+       url('../fonts/offside-v8-latin-regular.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
+       url('../fonts/offside-v8-latin-regular.woff2') format('woff2'), /* Super Modern Browsers */
+       url('../fonts/offside-v8-latin-regular.woff') format('woff'), /* Modern Browsers */
+       url('../fonts/offside-v8-latin-regular.ttf') format('truetype'), /* Safari, Android, iOS */
+       url('../fonts/offside-v8-latin-regular.svg#Offside') format('svg'); /* Legacy iOS */
+}
+
 
 /**
  * Basic styling
