--- a/_sass/minima/_layout.scss
+++ b/_sass/minima/_layout.scss
@@ -40,9 +40,8 @@
   margin-right: auto;
   margin-top: 0.625rem;
   margin-bottom: 0.001rem; // this is just a margin value so that border can be added
-  border-bottom: 2.5px dotted $grey-color;
+  // border-bottom: 2.5px dotted $grey-color;
   display: table;
-
 }
 
 
@@ -53,7 +52,7 @@ that is NOT the last one on the list */
   margin-right: 1rem;
   color: #4E6E4E;
   font-size: 1.40rem;
-
+  border-bottom: 2.5px dotted $grey-color;
   &:hover {
     color: #000;
   }
@@ -82,6 +81,7 @@ since its the right-tail end of the nav bar */
 .tail-link {
   color: #4E6E4E;
   font-size: 1.40rem;
+  border-bottom: 2.5px dotted $grey-color;
 
   &:hover {
     color: #000;
